--- a/contrib/test/integration/main.yml
+++ b/contrib/test/integration/main.yml
@@ -51,6 +51,10 @@
       include: "build/crun.yml"
       when: "build_crun | bool"
 
+    - name: install Kata Containers
+      include: "build/kata.yml"
+      when: "build_kata | bool"
+
     - name: clone build and install networking plugins
       include: "build/plugins.yml"
 
@@ -92,6 +96,10 @@
     - name: clone build and install runc
       include: "build/runc.yml"
       when: "build_runc | bool"
+
+    - name: install Kata Containers
+      include: "build/kata.yml"
+      when: "build_kata | bool"
 
     - name: set fs.may_detach_mounts = 1
       sysctl:
