--- a/contrib/test/integration/test.yml
+++ b/contrib/test/integration/test.yml
@@ -12,6 +12,24 @@
     path: "{{ artifacts }}"
     state: directory
 
+- name: kata configuration
+  block:
+    - name: configure integration test suite for kata
+      set_fact:
+        int_test_env: '{{ int_test_env | combine(kata_int_test_env) }}'
+        int_test_timeout: '{{60 * 60}}' # seconds
+        userns_int_test_skip: True
+
+    - name: skip tests not working in kata
+      lineinfile:
+        dest: "{{ ansible_env.GOPATH }}/src/github.com/cri-o/cri-o/test/ctr.bats"
+        insertafter: "{{ item }}"
+        line: "skip \"{{ item  | regex_replace('\"', \"'\") }} not working in kata\""
+        state: present
+      with_items: "{{ kata_skip_ctr_tests }}"
+
+  when: "build_kata | bool"
+
 - block:
 
     - name: Disable selinux during integration tests
