pinns: make binary not always static
as a packager may not want the build to always be static

Signed-off-by: Peter Hunt <pehunt@redhat.com>

--- a/pinns/Makefile
+++ b/pinns/Makefile
@@ -3,8 +3,7 @@ obj = $(src:.c=.o)
 
 STRIP ?= strip
 override LIBS +=
-CFLAGS ?= -std=c99 -Os -Wall -Werror -Wextra
-override CFLAGS += -static
+CFLAGS ?= -std=c99 -Os -Wall -Werror -Wextra -static
 
 all: ../bin/pinns
 
