contrib/test/int: allow to configure test timeout
Changing runtime may change test execution time. This is especially true
for kata-containers runtime which at present will require more time to run.
Allow to specify a different deadline for test execution by setting the
int_test_timeout var.

Signed-off-by: Francesco Giudici <fgiudici@redhat.com>

--- a/contrib/test/integration/test.yml
+++ b/contrib/test/integration/test.yml
@@ -23,7 +23,7 @@
       args:
         chdir: "{{ ansible_env.GOPATH }}/src/github.com/cri-o/cri-o"
       environment: '{{ int_test_env }}'  # from vars.yml and main.yml
-      async: '{{ 60 * 30 }}'  # seconds
+      async: '{{ int_test_timeout | default(60 * 30) }}'  # seconds
       poll: 30
 
     - name: run integration tests with userNS enabled + alternate results file
@@ -31,7 +31,7 @@
       args:
         chdir: "{{ ansible_env.GOPATH }}/src/github.com/cri-o/cri-o"
       environment: '{{ int_test_env | combine(userns_int_test_env) }} '
-      async: '{{ 60 * 30 }}'  # seconds
+      async: '{{ int_test_timeout | default(60 * 30) }}'  # seconds
       poll: 30
 
   always:
