contrib/test/int: allow to skip user namespace testing
Just add the 'userns_int_test_skip' boolean var.

Signed-off-by: Francesco Giudici <fgiudici@redhat.com>

--- a/contrib/test/integration/test.yml
+++ b/contrib/test/integration/test.yml
@@ -33,6 +33,7 @@
       environment: '{{ int_test_env | combine(userns_int_test_env) }} '
       async: '{{ int_test_timeout | default(60 * 30) }}'  # seconds
       poll: 30
+      when: userns_int_test_skip is not defined or not userns_int_test_skip
 
   always:
 
