Move static build to GitHub actions
This moves the whole static build pipeline from CircleCI to GitHub
actions, except the integration tests. The integration tests will follow
at some later point, if other integration tests are available and the
overall test strategy is clear.

Signed-off-by: Sascha Grunert <mail@saschagrunert.de>

--- a/contrib/bundle/build
+++ b/contrib/bundle/build
@@ -17,6 +17,7 @@ FILES_BIN=(
     "$GIT_ROOT/bin/static/pinns"
 )
 FILES_MAN=(
+    "$GIT_ROOT/docs/crio-status.8"
     "$GIT_ROOT/docs/crio.8"
     "$GIT_ROOT/docs/crio.conf.5"
     "$GIT_ROOT/docs/crio.conf.d.5"
