--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,18 @@ jobs:
           path: |
             bin/crio
             bin/crio-status
+      - uses: actions/upload-artifact@v2
+        with:
+          name: docs
+          path: |
+            docs/crio-status.8
+            docs/crio.8
+            docs/crio.conf.5
+            docs/crio.conf.d.5
+      - uses: actions/upload-artifact@v2
+        with:
+          name: config
+          path: crio.conf
 
   validate-docs:
     needs: build
@@ -43,6 +55,7 @@ jobs:
       - run: |
           chmod -R +x bin
           sudo rm /etc/containers/storage.conf
+      - run: |
           make docs-generation
           hack/tree_status.sh
 
@@ -55,7 +68,76 @@ jobs:
         with:
           name: build
           path: bin
+      - run: chmod -R +x bin
       - run: |
-          chmod -R +x bin
           make completions-generation
           hack/tree_status.sh
+
+  build-static:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: cachix/install-nix-action@v12
+      - uses: cachix/cachix-action@v8
+        with:
+          name: cri-o-static
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+      - run: nix-build nix
+      - run: result/bin/crio version
+      - uses: actions/upload-artifact@v2
+        with:
+          name: build-static
+          path: |
+            result/bin/crio
+            result/bin/crio-status
+            result/bin/pinns
+
+  bundle:
+    runs-on: ubuntu-latest
+    needs:
+      - build
+      - build-static
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+        with:
+          name: build-static
+          path: bin/static
+      - uses: actions/download-artifact@v2
+        with:
+          name: docs
+          path: docs
+      - uses: actions/download-artifact@v2
+        with:
+          name: config
+      - run: chmod -R +x bin
+      - run: make bundle
+      - uses: actions/upload-artifact@v2
+        with:
+          name: bundle
+          path: build/bundle/*.tar.gz
+
+  bundle-test:
+    runs-on: ubuntu-latest
+    needs: bundle
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+        with:
+          name: bundle
+          path: build/bundle
+      - run: make bundle-test
+
+  upload-artifacts:
+    runs-on: ubuntu-latest
+    needs: bundle-test
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+        with:
+          name: bundle
+          path: build/bundle
+      - run: make upload-artifacts
+        env:
+          GCS_BUCKET_SA: ${{ secrets.GCS_BUCKET_SA }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
