--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,6 +43,56 @@ jobs:
           name: config
           path: crio.conf
 
+  build-go1_14:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.14'
+      - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+          key: go-build-legacy-${{ hashFiles('**/go.sum') }}
+          restore-keys: go-build-legacy-
+      - run: scripts/github-actions-packages
+      - run: make
+      - run: bin/crio version
+
+  build-386:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+          key: go-build-386-${{ hashFiles('**/go.sum') }}
+          restore-keys: go-build-386-
+      - name: Build 386 binary in container
+        run: |
+          mkdir -p ~/.cache/go-build ~/go/pkg/mod
+          sudo podman run \
+            -v ~/go/pkg/mod:/go/pkg/mod \
+            -v ~/.cache/go-build:/root/.cache/go-build \
+            -v $PWD:/build \
+            -w /build \
+            -it i386/golang:1.15-alpine \
+            sh -c \
+              "apk --no-cache add \
+                bash \
+                build-base \
+                gpgme-dev \
+                libseccomp-dev \
+                libselinux-dev \
+                linux-headers \
+                tzdata && \
+              make bin/crio && \
+              bin/crio version"
+
   validate-docs:
     needs: build
     runs-on: ubuntu-latest
