--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,7 +68,9 @@ jobs:
         with:
           name: build
           path: bin
-      - run: chmod -R +x bin
+      - run: |
+          chmod -R +x bin
+          sudo rm /etc/containers/storage.conf
       - run: |
           make completions-generation
           hack/tree_status.sh
