--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -125,7 +125,7 @@ jobs:
           make completions-generation
           hack/tree_status.sh
 
-  build-static:
+  build-static-amd64:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -138,23 +138,47 @@ jobs:
       - run: result/bin/crio version
       - uses: actions/upload-artifact@v2
         with:
-          name: build-static
+          name: build-static-amd64
           path: |
             result/bin/crio
             result/bin/crio-status
             result/bin/pinns
 
-  bundle:
+  build-static-arm64:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: cachix/install-nix-action@v12
+      - uses: cachix/cachix-action@v8
+        with:
+          name: cri-o-static
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+      - run: nix-build nix/default-arm64.nix
+      - run: file result/bin/crio
+      - uses: actions/upload-artifact@v2
+        with:
+          name: build-static-arm64
+          path: |
+            result/bin/crio
+            result/bin/crio-status
+            result/bin/pinns
+
+  bundles:
     runs-on: ubuntu-latest
     needs:
       - build
-      - build-static
+      - build-static-amd64
+      - build-static-arm64
     steps:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
         with:
-          name: build-static
-          path: bin/static
+          name: build-static-amd64
+          path: bin/static-amd64
+      - uses: actions/download-artifact@v2
+        with:
+          name: build-static-arm64
+          path: bin/static-arm64
       - uses: actions/download-artifact@v2
         with:
           name: docs
@@ -163,7 +187,7 @@ jobs:
         with:
           name: config
       - run: chmod -R +x bin
-      - run: make bundle
+      - run: make bundles
       - uses: actions/upload-artifact@v2
         with:
           name: bundle
@@ -171,7 +195,7 @@ jobs:
 
   bundle-test:
     runs-on: ubuntu-latest
-    needs: bundle
+    needs: bundles
     steps:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
