--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -232,9 +232,13 @@ jobs:
       - run: make codecov
 
   release-notes:
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GH_TOKEN }}
       - uses: actions/cache@v2
         with:
           path: |
@@ -252,9 +256,13 @@ jobs:
           if-no-files-found: ignore
 
   dependencies:
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GH_TOKEN }}
       - uses: actions/cache@v2
         with:
           path: |
@@ -275,6 +283,9 @@ jobs:
     if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GH_TOKEN }}
       - uses: actions/cache@v2
         with:
           path: |
