Run release-notes GitHub action after dependencies
Both actions will access the `gh-pages` branch which can result in a
race. To fix this issue we now make both jobs dependent on each other.

Signed-off-by: Sascha Grunert <mail@saschagrunert.de>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -257,6 +257,7 @@ jobs:
 
   dependencies:
     if: github.ref == 'refs/heads/master'
+    needs: release-notes
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
