WIP: test odinuge/cgroup-v2-systemd
test: https://github.com/kubernetes/kubernetes/pull/98365

Signed-off-by: Giuseppe Scrivano <gscrivan@redhat.com>

--- a/contrib/test/integration/main.yml
+++ b/contrib/test/integration/main.yml
@@ -25,16 +25,16 @@
     - name: clone build and install kubernetes
       include: "build/kubernetes.yml"
       vars:
-        k8s_git_version: "release-1.19"
-        k8s_github_fork: "kubernetes"
+        k8s_git_version: "cgroup-v2-systemd"
+        k8s_github_fork: "odinuge"
         crio_socket: "/var/run/crio/crio.sock"
       when: "(cgroupv2 is undefined) or (cgroupv2 == False) | bool"
 
     - name: clone build and install kubernetes for cgroup v2
       include: "build/kubernetes.yml"
       vars:
-        k8s_git_version: "master"
-        k8s_github_fork: "kubernetes"
+        k8s_git_version: "cgroup-v2-systemd"
+        k8s_github_fork: "odinuge"
         crio_socket: "/var/run/crio/crio.sock"
       when: "cgroupv2 | bool"
 
@@ -156,8 +156,8 @@
       include: "build/kubernetes.yml"
       vars:
         force_clone: true
-        k8s_git_version: "master"
-        k8s_github_fork: "kubernetes"
+        k8s_git_version: "cgroup-v2-systemd"
+        k8s_github_fork: "odinuge"
         crio_socket: "/var/run/crio/crio.sock"
 
     - name: run k8s node-e2e tests
@@ -174,8 +174,8 @@
       include: "build/kubernetes.yml"
       vars:
         force_clone: true
-        k8s_git_version: "master"
-        k8s_github_fork: "kubernetes"
+        k8s_git_version: "cgroup-v2-systemd"
+        k8s_github_fork: "odinuge"
         crio_socket: "/var/run/crio/crio.sock"
 
     - name: clone build and install kubetest
@@ -197,16 +197,16 @@
       include: "build/kubernetes.yml"
       vars:
         force_clone: true
-        k8s_git_version: "master"
-        k8s_github_fork: "kubernetes"
+        k8s_git_version: "cgroup-v2-systemd"
+        k8s_github_fork: "odinuge"
         crio_socket: "/var/run/crio/crio.sock"
       when: "(cgroupv2 is undefined) or (cgroupv2 == False) | bool"
     - name: clone build and install kubernetes for cgroup v2
       include: "build/kubernetes.yml"
       vars:
         force_clone: true
-        k8s_git_version: "master"
-        k8s_github_fork: "kubernetes"
+        k8s_git_version: "cgroup-v2-systemd"
+        k8s_github_fork: "odinuge"
         crio_socket: "/var/run/crio/crio.sock"
       when: "cgroupv2 | bool"
 
