Fix GitHub actions workflow syntax
Signed-off-by: Sascha Grunert <mail@saschagrunert.de>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -232,7 +232,7 @@ jobs:
       - run: make codecov
 
   release-notes:
-    if: github.ref == 'refs/heads/master' || contains(github.ref, "refs/heads/release")
+    if: github.ref == 'refs/heads/master' || contains(github.ref, 'refs/heads/release')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
