Make `get` script independent from `make`
We now do not rely on `make` any more for sake of a higher portability
of the `get` script.

Signed-off-by: Sascha Grunert <sgrunert@redhat.com>

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -51,3 +51,13 @@ jobs:
           key: go-${{ hashFiles('**/go.sum') }}
           restore-keys: go-
       - run: make check-vendor
+
+  get-script:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: |
+          make get-script
+          hack/tree_status.sh
+      - run: sudo scripts/get
+      - run: crio version
