Fix GitHub actions cache key
The restore key did never match, which is now fixed by aligning it to the
actual cache key.

Signed-off-by: Sascha Grunert <sgrunert@redhat.com>

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -19,7 +19,7 @@ jobs:
           path: |
             ~/go/pkg/mod
             ~/.cache/go-build
-          key: go-build-${{ hashFiles('**/go.sum') }}
+          key: go-integration-${{ hashFiles('**/go.sum') }}
           restore-keys: go-integration-
       - run: scripts/github-actions-packages
       - run: scripts/github-actions-setup
@@ -41,7 +41,7 @@ jobs:
           path: |
             ~/go/pkg/mod
             ~/.cache/go-build
-          key: go-build-${{ hashFiles('**/go.sum') }}
+          key: go-integration-${{ hashFiles('**/go.sum') }}
           restore-keys: go-integration-
       - run: scripts/github-actions-packages
       - run: scripts/github-actions-setup
@@ -62,7 +62,7 @@ jobs:
           path: |
             ~/go/pkg/mod
             ~/.cache/go-build
-          key: go-build-${{ hashFiles('**/go.sum') }}
+          key: go-integration-${{ hashFiles('**/go.sum') }}
           restore-keys: go-integration-
       - run: scripts/github-actions-packages
       - run: scripts/github-actions-setup
@@ -86,7 +86,7 @@ jobs:
           path: |
             ~/go/pkg/mod
             ~/.cache/go-build
-          key: go-build-${{ hashFiles('**/go.sum') }}
+          key: go-integration-${{ hashFiles('**/go.sum') }}
           restore-keys: go-integration-
       - run: scripts/github-actions-packages
       - run: scripts/github-actions-setup
