--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,12 +3,16 @@ run:
   build-tags:
     - apparmor
     - containers_image_ostree_stub
+    # containers/image would use mtrmac/gpgme otherwise, which requires gpgme C headers
+    - containers_image_openpgp
     - seccomp
     - selinux
     - test
     # containers/storage currently has btrfs included, but the images don't, so
     # the linter fails.
     - exclude_graphdriver_btrfs
+    # needs devmapper headers installed
+    - exclude_graphdriver_devicemapper
   concurrency: 6
   deadline: 5m
 linters:
