ci/gha: use ubuntu-20.04
This is to fix the following GHA warning:

> Ubuntu-latest workflows will use Ubuntu-20.04 soon. For more details, see actions/virtual-environments#1816

Courtesy of

	sed -i -s 's/ubuntu-latest/ubuntu-20.04/' .github/workflows/*.yml

Signed-off-by: Kir Kolyshkin <kolyshkin@gmail.com>

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
 jobs:
   critest:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/setup-go@v2
         with:
@@ -30,7 +30,7 @@ jobs:
           RUN_CRITEST: '1'
 
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/setup-go@v2
         with:
@@ -51,7 +51,7 @@ jobs:
           JOBS: '2'
 
   test-cgroupfs:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/setup-go@v2
         with:
@@ -75,7 +75,7 @@ jobs:
           CONTAINER_CONMON_CGROUP: pod
 
   test-userns:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/setup-go@v2
         with:
