fix release notes
Signed-off-by: Peter Hunt <pehunt@redhat.com>

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -5,6 +5,7 @@ on:
       - v*
     branches:
       - master
+      - release-*
   pull_request:
 jobs:
   critest:
@@ -19,7 +20,7 @@ jobs:
           path: |
             ~/go/pkg/mod
             ~/.cache/go-build
-          key: go-build-${{ hashFiles('**/go.sum') }}
+          key: go-integration-${{ hashFiles('**/go.sum') }}
           restore-keys: go-integration-
       - run: scripts/github-actions-packages
       - run: scripts/github-actions-setup
@@ -41,7 +42,7 @@ jobs:
           path: |
             ~/go/pkg/mod
             ~/.cache/go-build
-          key: go-build-${{ hashFiles('**/go.sum') }}
+          key: go-integration-${{ hashFiles('**/go.sum') }}
           restore-keys: go-integration-
       - run: scripts/github-actions-packages
       - run: scripts/github-actions-setup
@@ -62,7 +63,7 @@ jobs:
           path: |
             ~/go/pkg/mod
             ~/.cache/go-build
-          key: go-build-${{ hashFiles('**/go.sum') }}
+          key: go-integration-${{ hashFiles('**/go.sum') }}
           restore-keys: go-integration-
       - run: scripts/github-actions-packages
       - run: scripts/github-actions-setup
@@ -86,7 +87,7 @@ jobs:
           path: |
             ~/go/pkg/mod
             ~/.cache/go-build
-          key: go-build-${{ hashFiles('**/go.sum') }}
+          key: go-integration-${{ hashFiles('**/go.sum') }}
           restore-keys: go-integration-
       - run: scripts/github-actions-packages
       - run: scripts/github-actions-setup
