Add static bundle node e2e tests to GitHub actions
This adds an additional e2e NodeConformance test suite for our static
binary bundle.

Signed-off-by: Sascha Grunert <sgrunert@redhat.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -205,6 +205,28 @@ jobs:
           path: build/bundle
       - run: make bundle-test
 
+  bundle-test-e2e:
+    runs-on: ubuntu-latest
+    needs: bundles
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.16'
+      - uses: actions/download-artifact@v2
+        with:
+          name: bundle
+          path: build/bundle
+      - name: Setup system
+        run: |
+          sudo apt-get remove \
+            conmon \
+            containernetworking-plugins \
+            crun \
+            moby-runc
+          sudo apt-get install -y conntrack
+      - run: make bundle-test-e2e
+
   upload-artifacts:
     runs-on: ubuntu-latest
     needs: bundle-test
