test: tiny name fix
Signed-off-by: Peter Hunt <pehunt@redhat.com>

--- a/contrib/test/integration/critest.yml
+++ b/contrib/test/integration/critest.yml
@@ -1,6 +1,6 @@
 ---
 # critest tests expect cgroupfs
-- name: set manage network ns lifecycle
+- name: set cgroup manager
   copy:
     dest: /etc/crio/crio.conf.d/01-ns-lifecycle.conf
     content: |
