Switch to `cri-o` bucket
We now switch to our own GCS bucket, update the keys and necessary paths
for those. The latest master artifacts have been already uploaded as
well as the v1.21.0 tag.

Signed-off-by: Sascha Grunert <sgrunert@redhat.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -240,7 +240,7 @@ jobs:
           path: build/bundle
       - run: make upload-artifacts
         env:
-          GCS_BUCKET_SA: ${{ secrets.GCS_BUCKET_SA }}
+          GCS_CRIO_SA: ${{ secrets.GCS_CRIO_SA }}
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
   unit:
