--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -230,6 +230,7 @@ jobs:
       - run: make bundle-test-e2e
 
   upload-artifacts:
+    if: github.ref == 'refs/heads/master' || contains(github.ref, 'refs/heads/release') || contains(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     needs: bundle-test
     steps:
