--- a/contrib/test/integration/system-packages.yml
+++ b/contrib/test/integration/system-packages.yml
@@ -73,7 +73,7 @@
     state: present
   with_items:
    - python-boto
-  when: (supports_python3 is not defined or not supports_python3) and ansible_distribution in ['RedHat', 'Centos']
+  when: (supports_python3 is not defined or not supports_python3) and ansible_distribution in ['RedHat', 'CentOS']
 
 - name: Update all packages
   package:
@@ -83,6 +83,6 @@
   poll: 10
   when: supports_python3 is not defined or not supports_python3
 
-- name: Update all packages RHEL 8 and Fedora >= 30
+- name: Update all packages RHEL 8, CentOS 8 and Fedora >= 30
   shell: sudo yum update -y
   when: supports_python3 is defined and supports_python3
