--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -12,10 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: '1.15'
-
+      - run: scripts/github-actions-packages
       - uses: golangci/golangci-lint-action@v2
         with:
           version: v1.32.2
