--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -7,13 +7,15 @@ on:
       - master
       - release-*
   pull_request:
+env:
+  GO_VERSION: '1.16'
 jobs:
   critest:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-go@v2
         with:
-          go-version: '1.16'
+          go-version: ${{ env.GO_VERSION }}
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
         with:
@@ -35,7 +37,7 @@ jobs:
     steps:
       - uses: actions/setup-go@v2
         with:
-          go-version: '1.16'
+          go-version: ${{ env.GO_VERSION }}
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
         with:
@@ -56,7 +58,7 @@ jobs:
     steps:
       - uses: actions/setup-go@v2
         with:
-          go-version: '1.16'
+          go-version: ${{ env.GO_VERSION }}
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
         with:
@@ -80,7 +82,7 @@ jobs:
     steps:
       - uses: actions/setup-go@v2
         with:
-          go-version: '1.16'
+          go-version: ${{ env.GO_VERSION }}
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
         with:
