--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -7,6 +7,8 @@ on:
       - master
       - release-*
   pull_request:
+env:
+  GO_VERSION: '1.16'
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -45,7 +47,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
-          go-version: '1.16'
+          go-version: ${{ env.GO_VERSION }}
       - uses: actions/cache@v2
         with:
           path: ~/go/pkg/mod
@@ -59,7 +61,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
-          go-version: '1.16'
+          go-version: ${{ env.GO_VERSION }}
       - uses: actions/cache@v2
         with:
           path: ~/go/pkg/mod
@@ -83,7 +85,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
-          go-version: '1.16'
+          go-version: ${{ env.GO_VERSION }}
       - uses: actions/cache@v2
         with:
           path: ~/go/pkg/mod
