test: Pin gomega and ginkgo versions
The new versions depend on newer golang and we don't
want to update golang for this branch.

Signed-off-by: Mrunal Patel <mrunalp@gmail.com>

--- a/contrib/test/integration/golang.yml
+++ b/contrib/test/integration/golang.yml
@@ -49,10 +49,10 @@
     - "{{ ansible_env.GOPATH }}/src/k8s.io/test-infra"
 
 - name: install Go tools and dependencies
-  shell: go get -u "github.com/{{ item }}"
+  shell: GO111MODULE=on go get -u "github.com/{{ item }}"
   args:
     chdir: /
   with_items:
-    - onsi/ginkgo/ginkgo
-    - onsi/gomega
+    - onsi/ginkgo/ginkgo@v1.16.4
+    - onsi/gomega@v1.16.0
     - jteeuwen/go-bindata/go-bindata
