Pin `github.com/u-root/u-root`
The `dependencies` GitHub action fails since quite some time because of
this dependency:

https://github.com/cri-o/cri-o/actions/workflows/test.yml?query=branch%3Amain

```
go run ./scripts/dependencies \
	--output-path /home/runner/work/cri-o/cri-o/build/dependencies
level=info msg="Ensuring output path /home/runner/work/cri-o/cri-o/build/dependencies"
level=info msg="Getting go modules"
level=fatal msg="Unable to listing go modules: command /opt/hostedtoolcache/go/1.17.7/x64/bin/go list --mod=mod -u -m --json all did not succeed: go list -m: github.com/u-root/u-root@v7.0.0+incompatible: retracted by module author: Published v7 too early (before migrating to go modules)\n"
exit status 1
```

We now pin it to the latest `HEAD` to solve that problem.

Signed-off-by: Sascha Grunert <sgrunert@redhat.com>

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -31,8 +31,11 @@ jobs:
   shfmt:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - run: make shfmt
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: ${{ env.GO_VERSION }}
+      - run: make shfmt
 
   docs:
     runs-on: ubuntu-latest
