drop use of deprecated package io/ioutil
Signed-off-by: Peter Hunt <pehunt@redhat.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -204,7 +204,7 @@ linters-settings:
       - valSwap
       - wrapperFunc
       - yodaStyleExpr
-      # - ioutilDeprecated
+      - ioutilDeprecated
       # - whyNoLint
 
       # Opinionated
