systemd: use on-failure as restart policy
Signed-off-by: Peter Hunt <pehunt@redhat.com>

--- a/contrib/systemd/crio.service
+++ b/contrib/systemd/crio.service
@@ -22,7 +22,7 @@ LimitNPROC=1048576
 LimitCORE=infinity
 OOMScoreAdjust=-999
 TimeoutStartSec=0
-Restart=on-abnormal
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
