--- a/contrib/test/ci/main.yml
+++ b/contrib/test/ci/main.yml
@@ -1,6 +1,9 @@
 ---
-- hosts: all
+- hosts: localhost, all
   remote_user: root
+  environment:
+    GOPATH: /usr/go
+  connection: local
   vars_files:
     - "{{ playbook_dir }}/vars.yml"
   tags:
@@ -61,7 +64,7 @@
     - name: install jq
       include: "build/jq.yml"
 
-- hosts: all
+- hosts: localhost, all
   remote_user: root
   vars_files:
     - "{{ playbook_dir }}/vars.yml"
@@ -102,7 +105,7 @@
         sysctl_set: yes
         ignoreerrors: yes
 
-- hosts: all
+- hosts: localhost, all
   remote_user: root
   vars_files:
     - "{{ playbook_dir }}/vars.yml"
@@ -136,7 +139,7 @@
     - name: run critest validation and benchmarks
       include: critest.yml
 
-- hosts: all
+- hosts: localhost, all
   remote_user: root
   vars_files:
     - "{{ playbook_dir }}/vars.yml"
@@ -159,7 +162,7 @@
     - name: run k8s e2e tests
       include: e2e.yml
 
-- hosts: all
+- hosts: localhost, all
   remote_user: root
   vars_files:
     - "{{ playbook_dir }}/vars.yml"
