--- a/contrib/test/ci/vars.yml
+++ b/contrib/test/ci/vars.yml
@@ -18,6 +18,9 @@ crio_integration_userns_filepath: "{{ artifacts }}/testout_userns.txt"
 crio_node_e2e_filepath: "{{ artifacts }}/junit_01.xml"
 result_dest_basedir: '{{ lookup("env","WORKSPACE") |
                          default(playbook_dir, True) }}/artifacts'
+# Environment variables to set when executing e2e tests 
+e2e_test_env:
+    KUBECONFIG: /var/run/kubernetes/admin.kubeconfig
 
 # Environment variables to set when executing integration tests
 int_test_env:
